# ffwfaxparser

./: CMakeLists.txt  README.md  create_coverage_report.sh  faxParser.kdev4
.kdev4/: faxParser.kdev4
CMakeModules/: CodeCoverage.cmake
include/: CurrentSection.h  IKeywords.h  ILocation.h  IOperation.h  IParser.h  IPrintable.h  IlsAnsbach.h  Operation.h  OperationKeywords.h  OperationResource.h  ParserUtility.h  PropertyLocation.h
src/: IlsAnsbach.cpp  Operation.cpp  OperationKeywords.cpp  OperationResource.cpp  ParserUtility.cpp  PropertyLocation.cpp
tests/: CMakeLists.txt  IlsAnsbachTest.cpp  OperationKeywordsTest.cpp  OperationResourceTest.cpp  OperationTest.cpp  ParserUtilityTest.cpp  PropertyLocationTest.cpp  TestRunner.cpp  main.cpp
tests/tmp/: IlsAnsbachTest.cpp  OperationKeywordsTest.cpp  PropertyLocationTest.cpp
